@@ -90,8 +90,7 @@ sub runTest # (command, logfile, env, params)
     defined $command or
         throw ANSTE::Exceptions::MissingArgument('command');
 
-    # TODO: pass environment variables
-    my $ret = system("$command $params > $log 2>&1");
+    my $ret = system("$env $command $params > $log 2>&1");
 
     # Checks if the command can't be executed or broken pipe signal
     if ($ret == -1) {
